--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
+    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
