--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "scripts": {
     "start": "webpack-dev-server --port 3333",
-    "build": "webpack"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@babel/cli": "^7.10.3",
@@ -33,6 +33,7 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "html-webpack-plugin": "^4.3.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
