--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@babel/cli": "^7.10.3",
     "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
     "apollo": "^2.28.3",
@@ -25,8 +27,8 @@
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-google-places-autocomplete": "^1.6.2",
     "react-icons": "^3.10.0",
-    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
@@ -34,6 +36,7 @@
   },
   "devDependencies": {
     "html-webpack-plugin": "^4.3.0",
+    "url-loader": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
